fix: inner scrollbars in mediacenter (mebis)

--- a/Frontend/src/app/modules/admin/mediacenter/mediacenter.component.scss
+++ b/Frontend/src/app/modules/admin/mediacenter/mediacenter.component.scss
@@ -1,7 +1,10 @@
 @import "../../../core-ui-module/styles/variables";
-:host ::ng-deep{
-  .mat-tab-body-wrapper{
+:host ::ng-deep {
+  .mat-tab-body-wrapper {
     padding: 20px;
+    .mat-tab-body, .mat-tab-body-content {
+      overflow: unset;
+    }
   }
 }
 .select-mediacenter{
